[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sionna.rt" = ["**/*.csv", "**/*.npy", "**/*.json", "**/*.xml", "**/*.ply"]

[project]
name = "sionna-rt"
version = "2.0.1"
description = "Sionna RT - A hardware-accelerated differentiable ray tracer for radio propagation modeling"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "The Sionna contributors", email = "sionna@nvidia.com" }
]
keywords = [
    "ray tracing",
    "radio propagation",
    "channel model",
    "coverage map",
    "radio map",
    "wireless communication",
    "differentiable ray tracing",
    "gradient-based optimization",
    "automatic differentiation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "mitsuba==3.8.0",
    "drjit==1.3.1",
    "matplotlib>=3.10",
    "scipy>=1.14.1",
    "numpy>=1.26",
    "importlib_resources>=6.4.5",
    "ipywidgets>=8.1.5",
    "pythreejs>=2.4.2",
    "typing-extensions>=4.12.2"
]

[project.urls]
source = "https://github.com/nvlabs/sionna-rt/"
documentation = "https://nvlabs.github.io/sionna/"
issues = "https://github.com/nvlabs/sionna/issues"

[project.optional-dependencies]
doc = [
    "docutils==0.21.2",
    "markupsafe==3.0.2",
    "nbconvert==7.17.1",
    "nbsphinx==0.9.6",
    "sphinx==8.1.3",
    "sphinx-autodoc-typehints==2.5.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-rtd-theme==3.1.0",
    "sphinxcontrib-bibtex>=2.6.0",
]

test = [
    "pytest>=8.3.4"
]

dev = [
    "pylint>=3.3.2"
]
